add note in analysis that only half of the correlation chart is necessary

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -38,7 +38,10 @@
    "metadata": {},
    "source": [
     "## Correlation matrix\n",
-    "The first visualization, the correlation matrix, is used to find columns that relate to each other or *correlate*. This can help brainstorm ideas for future visualizations. My code below randomly chooses 10 columns from the cleaned data and analyzes the correlation."
+    "The first visualization, the correlation matrix, is used to find columns that relate to each other or *correlate*. This can help brainstorm ideas for future visualizations. My code below randomly chooses 10 columns from the cleaned data and analyzes the correlation.\n",
+    "\n",
+    "\n",
+    "You only need to look at the data under and to the left of the red squares as it is mirrored to the other side."
    ]
   },
   {
