--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Testing Notebook\n",
     "\n",
-    "**Note:** This Jupyter notebook is for testing and playing around with the data. It is not a final product. Please refer to the main notebooks for finalized and polished code."
+    "**Note:** This Jupyter notebook is for testing and playing around with the data. It is not a final product. Let me know if you have problems with it in Github Issues."
    ]
   },
   {
