work on sport data

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -142,6 +142,48 @@
     "plt.ylabel('Variable')\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  What sport do play? How long have you played that sport?  \\\n",
+      "0                       Dance, competitively 2 years         \n",
+      "1                               Volleyball (6months)         \n",
+      "2                            Cross Country - 3 Years         \n",
+      "3                         Cross Country for 3 years          \n",
+      "4                                    Skiing; 4 years         \n",
+      "\n",
+      "  What's the best sport?         What sports do you play?  \n",
+      "0                 Soccer                            Dance  \n",
+      "1                 Tennis                      volleyball   \n",
+      "2                 Tennis  cross country, track, badminton  \n",
+      "3                 Soccer          cross country and track  \n",
+      "4             Basketball                 Skiing, Swimming  \n"
+     ]
+    }
+   ],
+   "source": [
+    "uncleaned_data = pd.read_csv('ninthdata.csv')\n",
+    "# print(uncleaned_data.head())\n",
+    "\n",
+    "sport_data = uncleaned_data[[\"What sport do play? How long have you played that sport?\", \"What's the best sport?\", \"What sports do you play?\"]]\n",
+    "print(sport_data.head())\n",
+    "\n",
+    "sport_data.to_csv('cleaned_sport.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
